--- a/src/app/pages/home/home.scss
+++ b/src/app/pages/home/home.scss
@@ -16,6 +16,33 @@
 
 
 
+
+.card-top {
+  flex: 1; // üst yarı
+  padding: 10px;
+  border-bottom: 1px solid #e5e7eb;
+}
+
+.card-bottom {
+  flex: 1;          /* bottom kalan alanı kaplasın */
+  display: flex;    /* chart ve legend yan yana */
+  gap: 16px;
+  padding: 0;       /* padding'i kaldırdık, alt/üst boşluk big-panel ile birleşsin */
+  overflow: hidden; /* scroll kapat */
+}
+
+    // buradaki içerikleri ikiye böl
+    .section {
+      flex: 1; 
+      padding: 10px;
+      border-bottom: 1px solid #f0f0f0;
+
+      &:last-child {
+        border-bottom: none; // en altta çizgi olmasın
+      }
+    }
+  }
+}
     .main-content {
       flex: 1;
       display: flex;
@@ -65,5 +92,5 @@
   }
       }
     }
-  }
-}
+  
+
